--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.5",
     "@types/uuid": "^10.0.0",
+    "@vercel/analytics": "^1.4.1",
     "bcryptjs": "^2.4.3",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.3.2",
